syntax = "proto3";
package qa.loadtesting.alilo.backend.v1;

option go_package = "github.com/aliexpressru/alilo-backend/pkg/pb/qa/loadtesting/alilo/backend/v1";


import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

import "qa/loadtesting/alilo/backend/v1/models.proto";


message AmmoUploadRequest {
  string name = 2;
  string description = 3;
  string bucket_name = 4;
  string project_title = 6;
  string scenario_title = 7;
  bytes ammo_file = 8;
  //(text/plain / application/json / ) можно указывать пустой
  string content_type = 9;
}

message AmmoUploadResponse {
  bool status = 1;
  string message = 2;
  .qa.loadtesting.alilo.backend.v1.AmmoFile ammo_file = 3;
}

message GetDataAmmoRequest {
  int32 ammo_id = 1;
}

message GetDataAmmoResponse {
  bool status = 1;
  string message = 2;
  .qa.loadtesting.alilo.backend.v1.AmmoFile ammo_file = 3;
}

message GetAllAmmoRequest {
}

message GetAllAmmoResponse {
  bool status = 1;
  string message = 2;
  repeated .qa.loadtesting.alilo.backend.v1.AmmoFile ammo_files = 3;
}
